# phonebook

./: Cargo.toml  Dioxus.toml
assets/: output.css
src/: main.rs
src/functions/: mod.rs  navbar_css.rs
src/views/: directory.rs  favourites.rs  home.rs  login.rs  mod.rs  navbar.rs  pagenotfound.rs
